fix layout cannot fit 3 images issue

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -22,7 +22,7 @@ ul {
 
 .story li {
   display: inline-block;
-  margin: 0.625em;
+  margin: 0.6em;
 }
 
 .stories .story {
